# MineCraft-Clone-CMake-C-

./: cmd.txt
sfml-pong/: .gitignore  CMakeLists.txt  README.md  build_game.sh  config_out.txt
sfml-pong/assets/: README.txt
sfml-pong/build_fix/: CMakeCache.txt  Makefile  build_log.txt  cmake_install.cmake
sfml-pong/src/: cube.cpp  main.cpp  rendering.cpp  rendering.h  texture_atlas.cpp  texture_atlas.h  world.cpp  world.h
